[gd_scene load_steps=3 format=2]

[ext_resource path="res://Cameron/shadow.png" type="Texture" id=1]
[ext_resource path="res://XX_ONLY_Cameron_ONLY_XX/ENEMY/Enemy.gd" type="Script" id=2]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="AttackSpeed" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
